@@ -56,7 +56,7 @@ namespace Cumberland.Tests
 		{
 			string wkt = "MULTIPOLYGON(((0 0 0,4 0 0,4 4 0,0 4 0,0 0 0),(1 1 0,2 1 0,2 2 0,1 2 0,1 1 0)),((-1 -1 0,-1 -2 0,-2 -2 0,-2 -1 0,-1 -1 0)))";
 			
-			List<Polygon> l = WellKnownText.ParseMultiPolygon(wkt);
+			List<Feature> l = WellKnownText.ParseMultiPolygon(wkt);
 			
 			Assert.IsTrue(l.Count == 2);
 		}
