@@ -41,6 +41,8 @@ namespace Cumberland.Data
 	{
 		FeatureType SourceFeatureType { get; }
 		
+		Rectangle Extents { get; }
+		
 		List<Feature> GetFeatures(Rectangle rectangle);
 	}
 }
